--- a/templates/index.html
+++ b/templates/index.html
@@ -2,57 +2,7 @@
 			<html xmlns="http://www.w3.org/1999/xhtml">
 			<head>
 			<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-			<style type="text/css">
-				@charset "utf-8";
-				/* CSS Document */
-
-				#container {
-					width: 970px;
-					position: relative;
-					text-align: center;
-					margin: 0 auto;
-				}
-
-				#quest {
-					width: 100%;
-					height: 40px;	
-					border:4px solid black;
-					margin-top: 30px;
-				}
-
-				#answleft {
-					float: left;
-					width: 40%;
-					height: 40px;
-					border:1px solid black;
-					margin-top: 20px;
-				}
-
-				#answright {
-					float: right;
-					width: 40%;
-					height: 40px;
-					border:1px solid black;
-					margin-top: 20px;
-				}
-
-				#answleft:hover {
-					margin-top: 18px;
-					margin-left: -2px;
-					border-width: 4px;
-				}
-
-				#answright:hover {
-					margin-top: 18px;
-					margin-right: -2px;
-					border-width: 4px;
-				}
-
-				a:link {color: black;}      /* unvisited link */
-				a:visited {color: black;}  /* visited link */
-				a:hover {color: black;}  /* mouse over link */
-				a:active {color: black;}  /* selected link */ 
-			</style>
+			<LINK href="/static/style.css" rel="stylesheet" type="text/css">
 			<title>Rating</title>
 			</head>
 
